# bifrost

./: .eslintrc  .gitignore  API.paw  Cargo.toml  Dockerfile  LICENSE  README.md  README.txt  gulpfile.js  logo.monopic  package-lock.json  package.json  pnpm-lock.yaml
data/: reagents.json  reagents.orig.json  search_tests.json  substance_aliases.json  wiki_redirects.json
legacy/variant1/: package.json  testbed-bootstrap.js
legacy/variant1/graph/helpers/: pwPropParser.js  smwDataArbitrator.js
legacy/variant1/graph/schema/: rootQuery.js
legacy/variant1/services/: graph.js
legacy/variant1/util/: features.js
legacy/variant2/: package.json  pnpm-lock.yaml
legacy/variant2/src/: config.js  index.js
legacy/variant2/src/core/: cache.js  logger.js
legacy/variant2/src/graphql/: resolvers.js  schema.js  server.js
legacy/variant2/src/services/plebiscite/: database.js
legacy/variant2/src/services/psychonautwiki/: connector.js  parser.js  service.js  transformer.js
legacy/variant2/src/utils/: ascii.js
scripts/: convert_reagents.py  fetch_redirects.py
server/: index.js  log.js
server/features/: plebiscite.js
server/graph/: index.js  itemType.js  resolvers.js
server/graph/helpers/: pwPropParser.js  smwDataArbitrator.js
server/graph/schema/: rootQuery.js
server/graph/storage/: connector.js  models.js
server/services/: graph.js
server/util/: ac.js  constants.js  features.js
src/: config.rs  error.rs  main.rs  metrics.rs
src/cache/: mod.rs  persistence.rs  revalidation.rs  revalidator.rs  selftest.rs  shaping.rs  snapshot.rs
src/graphql/: mod.rs  model.rs  schema.rs
src/services/: mod.rs
src/services/plebiscite/: mod.rs
src/services/psychonaut/: api.rs  mod.rs  parser.rs
src/services/reagents/: mod.rs
src/utils/: ascii.rs
