[package]
name = "bifrost"
version = "3.0.0"
edition = "2021"
authors = ["Bifrost Maintainers"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.8"
async-graphql = { version = "7.0", features = ["chrono", "bson"] }
async-graphql-axum = "7.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dotenvy = "0.15"
regex = "1.10"
md-5 = "0.10"
hex = "0.4"
futures = "0.3"
chrono = "0.4"
once_cell = "1.19"
tower-http = { version = "0.5", features = ["cors", "trace"] }
