[package]
name = "bifrost"
version = "4.0.0"
edition = "2021"
authors = ["Bifrost Maintainers"]

[dependencies]
tokio = { version = "1.35", features = ["full", "sync"] }
axum = "0.8"
async-graphql = { version = "7.0", features = ["chrono", "bson"] }
async-graphql-axum = "7.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dotenvy = "0.15"
regex = "1.10"
md-5 = "0.10"
hex = "0.4"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
tower-http = { version = "0.5", features = ["cors", "trace"] }
urlencoding = "2.1"

# New dependencies for snapshot cache
prometheus = "0.13"
rmp-serde = "1.1"
sha2 = "0.10"
rand = "0.8"
tokio-util = "0.7"
dashmap = "5.5"

[dev-dependencies]
tempfile = "3.24.0"
